# audio-visualizer

./: .gitattributes  .gitmodules  AudioPlayback.cpp  AudioPlayback.h  AudioProgress.cpp  AudioProgress.h  CMakeLists.txt  Doxyfile  FourierTransform.cpp  FourierTransform.h  README.md  TinyMessage.h  audio_playback.cc  audio_playback.h  audio_progress.h  drawing_stuff.cpp  drawing_stuff.h  example_window.cpp  fourier_transform.cc  fourier_transform.h  main.cc  main.cpp  micro_example.cpp  progress_bar.cpp  saletradebil.cpp  tiny_message.h  volume_graph.cpp
.github/workflows/: cmake.yml  main.yml
components/audio/: FourierConfig.h  audio_playback.cc  audio_playback.h  audio_progress.cc  audio_progress.h  fourier_config.h  fourier_transform.cc
components/graphics/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  Coord.cpp  Coord.h  DataInterpreter.cpp  DataInterpreter.h  FPS_Counter.cpp  FPS_Counter.h  RGBColor.cpp  RGBColor.h  canvas.cc  canvas.cpp  canvas.h  drawing_stuff.cc  drawing_stuff.cpp  drawing_stuff.h  equalizer_window.cc  equalizer_window.cpp  equalizer_window.h  fps_counter.cc  fps_counter.h  handle_events.cpp  handle_events.h  rgb_color.cc
components/graphics/Buttons/: Button.cpp  Button.h  PState_Button.cpp  PState_Button.h  Toggle_Button.cpp  Toggle_Button.h  canvas_button.cc  canvas_button.h
components/graphics/assets/: 10backward.ppm  10forward.ppm  axis_off.ppm  axis_on.ppm  backward.ppm  crosshair.ppm  crosshair_off.ppm  crosshair_on.ppm  down-arrow.ppm  down.ppm  forward.ppm  microphone.ppm  minus.ppm  normalize_off.ppm  normalize_on.ppm  pause.ppm  play.ppm  plus.ppm  reflect_off.ppm  reflect_on.ppm  settings_off.ppm  settings_on.ppm  start.ppm  statistics.ppm  statistics_low.ppm  statistics_on.ppm  stop.ppm  up-arrow.ppm  up.ppm  upload.ppm
components/graphics/canvas/: canvas.cc  canvas.h  coord.cc  coord.h  rgb_color.h
components/graphics/ppm_loader/: file_exception.h
components/graphics/window/: drawing_stuff.cc  drawing_stuff.h  equalizer_window.cc  equalizer_window.h  fps_counter.cc  fps_counter.h  handle_events.cpp  handle_events.h  window_tests.md
components/scheduler/: Action.h  DataFrame.h  p_scheduler.cpp  p_scheduler.h
tinyfiledialogs/: CMakeLists.txt
tinyfiledialogs/extras_dll_cs_lua_fortran/: tinyfiledialogs32.lib  tinyfiledialogs64.lib
